--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,4 @@
-/*@import "../fonts/flaticon-uicons/css/all/all.css";*/
-/*@import "../fonts/flaticon-uicons/css/regular/straight.css"*/
-@import "../fonts/flaticon-uicons/css/regular/straight.css";
-@import "../fonts/flaticon-uicons/css/solid/rounded.css";
+
+@import "@flaticon/flaticon-uicons/css/regular/straight.css";
+@import "@flaticon/flaticon-uicons/css/solid/rounded.css";
 @import "./styles/main.scss";
